Latest changes by Suchita and Yangyang
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@467 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -161,8 +161,8 @@ and DM mass of 1~\tev for all models.
 		\label{fig:METSimpMonoHiggs}}
 \end{figure}
 
-Predictions for this class of models have been so far considered at LO+ Parton Shower (PS)\textcolor{red}{check this}, even though they could be extended to NLO+PS in the near future. The studies in this Section
-have been performed using a model within \madgraph v2.2.3, interfaced to \pythia 8 \textcolor{red}{any chance of getting exact pythia version?} for the parton shower.  
+Predictions for this class of models have been so far considered at LO+ Parton Shower (PS), even though they could be extended to NLO+PS in the near future. The studies in this Section
+have been performed using a model within \madgraph v5.1.5.12, interfaced to \pythia 6 for the parton shower.  
 The implementation details for these models are discussed in Section~\ref{sec:monoHImplementation}.
 
 \subsection{\MET+Higgs from a baryonic \Zprime}
@@ -624,7 +624,7 @@ as long as $\mDM<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fi
   
 We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $\mDM=100$~\gev. For these values, we scan the 2-D parameter space of ${M_{\Zprime}, M_{A^0}}$ with $M_{\Zprime}=600, 800, 1000, 1200, 1400$~\gev, and $M_{A^0}=300, 400, 500, 600, 700, 800$~\gev with $M_{A^0} < M_{\Zprime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\cite{Berlin:2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{\Zprime} \sim 1.5$~\tev.
 For the parameter scan, the DM mass is fixed to 100~\gev. For two $M_{\Zprime}$, $M_{A^0}$ value sets, we vary the DM mass to obtain sample cross section for rescaling results. 
-All LO cross sections for the various parameter scan points are reported in Appendix~\ref{app:EWSpecificModels_Appendix}.
+All LO cross sections for the various parameter scan points are reported in HEPData~\cite{HEPData}.
 The parameter scan excludes the off-shell region, as the cross-sections are suppressed and the LHC would not have any
 sensitivity to these benchmark points in early data. 
 
