--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -178,6 +178,8 @@
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
 \emph{FNAL, USA}\\
+\noindent\href{mailto:csmoon@cern.ch}{Chang-Seong Moon} 
+\emph{Universidade Estadual Paulista, Spain}\\
 \noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M. Narayanan} 
 \emph{MIT, USA}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
