correct reference to figure
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@469 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/tex/EFTValidity.tex
+++ b/PhysicsDarkUniverse/tex/EFTValidity.tex
@@ -173,7 +173,7 @@ a search is not simply a counting experiment and exploits the shapes of kinemati
 
 \subsubsection{Sample results of EFT truncation procedures}
 
-An example of the application of the two procedures to the limit on \Mstar from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{Ecm<Mcut}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
+An example of the application of the two procedures to the limit on \Mstar from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{fig:monojet_MstarMmed}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
 
 \begin{figure}
 	\centering
