--- a/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
+++ b/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
@@ -124,15 +124,15 @@ to the combined quark number and color factor enhancement. We specifically assum
 
 \begin{figure}
 \centering
-\includegraphics[width=0.95\textwidth]{figures/monojet/width_V}
-\includegraphics[width=0.95\textwidth]{figures/monojet/width_A}
+\includegraphics[width=0.8\textwidth]{figures/monojet/width_V}
+\includegraphics[width=0.8\textwidth]{figures/monojet/width_A}
 \caption{Minimal width as a function of mediator mass for vector and axial-vector mediator assuming couplings of 1. The total width is shown as solid lines for DM masses of 10~\gev, 30~\gev, 100~\gev and 300~\gev in black, red, brown and green, respectively. The individual contributions from DM are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 \label{fig:monojet_width_V}
 \end{figure}
 
 Therefore, the minimal set of parameters under consideration for these two models is
 \bea
-\left\{~\gq, ~ \gDM, ~\mDM,~\mMed,\right\} \,.
+\left\{~\gq, ~ \gDM, ~\mDM,~\mMed\right\} \,
 \eea
 together with the spin structure of their couplings. 
 
@@ -222,7 +222,7 @@ may restrict \gq to a greater degree than \gDM.
 
 For a fixed mediator mass \mMed and couplings, the DM mass falls into three regimes:
 \begin{itemize}
-\item[On-shell:] When $\Mmed \gg 2 \mDM$, most mediators are on-shell. The hardness of the ISR is set by \Mmed, and the kinematic distributions do not strongly depend on \mDM. This is illustrated in Fig.~\ref{fig:monojet_scan_V_mDM1000} for an example of \mMed=1~\tev 10~\gev $<\mDM<$ 300~\gev. The cross section decreases as the \mDM approaches $\mMed/2$. A coarse binning along $\mDM$ is sufficient.
+\item[On-shell:] When $\Mmed \gg 2 \mDM$, most mediators are on-shell. The hardness of the ISR is set by \Mmed, and the kinematic distributions do not strongly depend on \mDM. This is illustrated in Fig.~\ref{fig:monojet_scan_V_mDM1000} for an example of \mMed=1~\tev, $10~\gev <\mDM< 300~\gev$. The cross section decreases as the \mDM approaches $\mMed/2$. A coarse binning along $\mDM$ is sufficient.
 \item[Threshold:] When $\Mmed \approx 2\mDM$, the production is resonantly enhanced, and both the cross section and kinematic distributions change more rapidly as a function of the two masses, and finer binning is needed in order to capture the changes.
 \item[Off-shell:] When $\Mmed \ll 2 \mDM$, the DM pair is produced by an off-shell mediator. The mediator propagator gives an explicit suppression of $(\Mmed/Q)^2$ that suppresses hard ISR. The $\mDM=1$~\tev case, shown in Fig.~\ref{fig:monojet_scan_V_mDM1000}, and Figure\,\ref{fig:monojet_scan_V_mDM100} demonstrates that the \MET spectrum hardens with increasing \mDM, accompanied by the gradual decrease of the cross section. Due to the significant cross section suppression, it is not necessary to fully populate the parameter space. Imminent LHC searches are not expected to be sensitive to these signals.
 \end{itemize}
@@ -472,7 +472,7 @@ assumption: the very narrow width of the mediator and its extreme sensitivity to
        \gdm \phi \bar{\chiDM}\chiDM+ \frac{\phi}{\sqrt{2}} \sum_i \left(g_u y_i^u \bar{u}_i u_i+g_d y_i^d \bar{d}_i d_i+g_\ell y_i^\ell \bar{\ell}_i \ell_i\right)\, , \label{eq:scalarlag} \\
     \mathcal{L}_{a} & = &
        i\gdm a \bar{\chiDM}\gamma_5\chiDM+ \frac{i a}{\sqrt{2}}\sum_i  \left(g_u y_i^u \bar{u}_i \gamma_5 u_i+g_d y_i^d \bar{d}_i \gamma_5 d_i+ \right. \nonumber \\
-                                   & & \left. g_\ell y_i^\ell   \bar{\ell}_i \gamma_5 \ell_i\right) \,. \label{eq:pseudoscalarlag}
+                                   & & \left. g_\ell y_i^\ell   \bar{\ell}_i \gamma_5 \ell_i\right) \, \label{eq:pseudoscalarlag}
   \end{eqnarray}
 where $\phi$ and $a$ are respectively the scalar and pseudoscalar mediators, and the Yukawa couplings $y_i^f$ are normalized to the Higgs vev as $y_i^f = \sqrt{2}m_i^f/v$.
 
