--- a/PhysicsDarkUniverse/tex/EWSpecificModels.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels.tex
@@ -1,4 +1,4 @@
-%%Introduction
+ %Introduction
 
 In this Section, we consider specific models with a photon, a W boson, a Z boson or a Higgs boson in the final state (\textit{V+\MET} signature), accompanied by DM particles that either couple directly to the boson or are mediated by a new particle. The common feature of those models is that they provide different kinematic distributions with respect to the models described in Section~\ref{subsec:MonojetLikeModels}.
 
