--- a/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
+++ b/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
@@ -746,7 +746,7 @@ pseudo-scalar or vector mediators can be found in Ref.~\cite{Lee:2012ph}.
 \label{sec:monojet_t_channel}
 \input tex/TChannelModels.tex
 
-\section{ \Spintwo mediator}
+\subsection{ \Spintwo mediator}
 \label{sec:spintwo}
 
 In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the SM and dark sector physics. This kind of model was not studied in the forum and is not included in the recommendations, but models such as Ref.~\cite{Lee:2013bua,Lee:2014caa} may warrant further study on a longer timescale. 
@@ -761,7 +761,7 @@ In models with extra dimensions, the Kaluza-Klein excitations of the graviton co
 
 %The proposal for the scan in the $\gq$--$\gDM$ plane is described in the following section.
 
-\section{Presentation of results for reinterpretation of \schannel mediator models}
+\subsection{Presentation of results for reinterpretation of \schannel mediator models}
 \label{sec:monojet_scaling}
 
 The aim of the parameter grid optimization done for the \schannel models in the previous sections is to reduce the parameter space that must be simulated.  We then need a procedure for populating the full parameter space by using the simulated grid points.  We recommend doing this as follows:
@@ -897,7 +897,7 @@ Constant colors indicate the lines along which the cross section scaling works p
 \end{figure*}
 
 
-\subsection{Proposed parameter grid for cross-section scaling}
+\subsubsection{Proposed parameter grid for cross-section scaling}
 
 We propose to deliver collider results in the $\gq$--$\gDM$ plane using the following prescription, to ease reinterpretation through cross-section scaling:
 \begin{itemize}
@@ -918,7 +918,7 @@ The scaling follows from Eq.\,\ref{eq:monojet_scaling} which for the constant wi
 %choose mDM=50, mMed=300, gDM=gSM={0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5} for V (mMed=GammaMin is reached around 1.5)
 %choose mDM=50, mMed=1000, gDM=gSM={0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5} for V (mMed=GammaMin is reached around 1.4)
 
-\subsection{Rescaling to different mediator width}
+\subsubsection{Rescaling to different mediator width}
 \label{paragraph:nonminimalwidth}
 
 In general it is also important to consider a larger mediator width than $\Gamma_{\rm{min}}$ in order to accommodate additional interactions of the mediator with the visible and hidden sector particles~\cite{Buckley:2014fba,Harris:2014hga}. If the narrow width approximation applies, the cross section scaling method described above can be used to reinterpret the results presented for the minimal width, since multiplying the width by factor $n$ is equivalent to changing the coupling strength by factor $\sqrt{n}$, i.e.
@@ -935,7 +935,7 @@ The advantage of doing this is in the fact that no event selection and detector 
 
 It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the vector and axial-vector cases, one quickly breaks this approximation even for small $n$.
 
-\subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+\MET signatures}{Additional considerations for ttbar/bbbar+\MET signatures}}
+\paragraph{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+\MET signatures}{Additional considerations for ttbar/bbbar+\MET signatures}}
 
 The cross-section scaling considerations shown in Sec.~\ref{sec:monojet_scaling} still apply for the reactions in the scalar and psuedoscalar models with explicit $b$ and $t$ quarks. Here 
 we detail the specific studies done for the  $t\bar t$ model. 
