--- a/PhysicsDarkUniverse/tex/TChannelModels.tex
+++ b/PhysicsDarkUniverse/tex/TChannelModels.tex
@@ -500,6 +500,6 @@ in the case of signatures including EW bosons
 parallels that of the monojet case for mediator and DM masses,
 but no kinematic dependence on the width is observed, so a coupling scan is not needed. 
 
- \subsection{\texorpdfstring{Additional considerations for signatures with $b-$quarks + \MET}{Additional considerations for signatures  with b-quarks + \MET}}
+ \paragraph{\texorpdfstring{Additional considerations for signatures with $b-$quarks + \MET}{Additional considerations for signatures  with b-quarks + \MET}}
  \label{sec:singleb}
  \input{tex/SingleB.tex}
