--- a/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
@@ -147,10 +147,10 @@ and DM mass of 1~\tev for all models.
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[High mediator mass]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/models_cmp_MET_et_Log} \label{fig:met_cmp_high}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/models_cmp_MET_et_Log} \label{fig:met_cmp_high}
 	}\\
 	\subfloat[Low mediator mass]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/models_cmp_low_MET_et_Log} \label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/models_cmp_low_MET_et_Log} \label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the missing transverse momentum distributions at generator level in different 
 		simplified models leading to a Higgs+\MET signature. The model parameter settings are detailed in the text. The figures in this Section have been obtained using LO UFO models within \madgraph v2.2.3, interfaced to \pythia 8 for the parton shower.  		
@@ -230,10 +230,12 @@ For this reason, the same grid in \mmed, \mdm as for the vector mediator
 of the jet+\MET search (Table~\ref{tab:mDMmMedScan_VA}) is chosen as a starting point. 
 The coupling $g_{h\Zprime \Zprime}$, along with \gq and \gDM, are subject to perturbativity bounds:
 
-$$\gq, \gDM < 4\pi $$
+$$\gq, \gDM < 4\pi $$,
+
 and
 
-$$  g_{h \Zprime \Zprime} < \sqrt{4\pi}m_{\Zprime}\sin\theta$$ 
+$$  g_{h \Zprime \Zprime} < \sqrt{4\pi}m_{\Zprime}\sin\theta$$. 
+
 The value $g_{h \Zprime \Zprime}/m_{\Zprime} = 1$ is chosen as a benchmark value for the generation 
 of Monte Carlo samples since it maximizes the cross section (as shown in the following paragraph)
 without violating the bounds. The mediator-DM coupling \gDM is fixed to 1, and  
@@ -251,8 +253,8 @@ on a smaller set of grid points to be generated.
 
 \begin{figure}[htpb!]
 	\centering
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/z_gdm_MET_et_Log}\\
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/z_ratio_MET_et_Log}
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/z_gdm_MET_et_Log}\\
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/z_ratio_MET_et_Log}
 	\caption{Missing transverse momentum distributions at generator level in the vector 
 		mediator scenario for different values of: the mediator-DM coupling \gDM (left),
 		and the coupling between the mediator and the SM-like Higgs boson, scaled by the mediator mass, 
@@ -262,8 +264,8 @@ on a smaller set of grid points to be generated.
 
 \begin{figure}[htpb!]
 	\centering
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zprime_100_MET_et_Log}\\
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zprime_1000_MET_et_Log}
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zprime_100_MET_et_Log}\\
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zprime_1000_MET_et_Log}
 	\caption{Missing transverse momentum distributions at generator level in the vector 
 		mediator scenario: for different values of the DM mass \mDM 
 		and a mediator mass of \mmed = 100~\gev (left) and \mmed = 1~\tev (right).
@@ -274,13 +276,13 @@ on a smaller set of grid points to be generated.
 \begin{figure}[htpb!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading $b-$jets (from the Higgs decay) in the vector \Zprime simplified model, 
 		when fixing the \Zprime mass to 100~\gev and varying the DM mass. 
@@ -291,13 +293,13 @@ on a smaller set of grid points to be generated.
 \begin{figure}[htpb!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}\hfill
 	\subfloat[\text{Angular separation of the two leading $b$-jets}]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zpzp1000/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zpzp1000/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector \Zprime simplified model, 
 		when fixing the \Zprime mass to 1000~\gev and varying the DM mass. 
@@ -340,7 +342,7 @@ The first two processes depend on the $h^2 S$ and $h S^2$ cubic terms in Eq.~\eq
 At leading order in $\sin\theta$, these terms are:
 
 \be
-V_{\rm cubic} \approx \frac{\sin\theta}{v} ( 2 m_h^2 + m_S^2) h^2 S  + b \, v \, h \, S^2 + ...
+V_{\rm cubic} \approx \frac{\sin\theta}{v} ( 2 m_h^2 + m_S^2) h^2 S  + b \, v \, h \, S^2 + ... , 
 \ee
 with $a$ and $\lambda_h$ expressed in terms of $\sin\theta$ and $m_h^2$, respectively.  
 At leading order of $\sin\theta$, the $h^2 S$ term is fixed once the mass eigenvalues $m_h, m_S$ 
@@ -417,14 +419,14 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar100/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the scalar simplified model, 
@@ -435,15 +437,15 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}
 	\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/scalar1000/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/scalar1000/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the scalar simplified model, 
 		when fixing the new scalar mass to 1000~\gev and varying the DM mass. 
@@ -514,13 +516,15 @@ to leading order in $\epsilon$ (Eq.~\ref{eq:epsilon}) is
 \begin{equation}
 \Gamma_{\Zprime \to h A^0} =  (g_z \sin \beta \cos \beta)^2 \frac{|p|}{24 \pi} \frac{|p|^2}{M_{\Zprime}^2}.
 \end{equation}
-where the center of mass momentum for the decay products
-$\displaystyle |p| = \frac{1}{2 M_{\Zprime}} \sqrt{ (M_{\Zprime}^2 - (m_h + m_{A^0})^2)
-(M_{\Zprime}^2 - (m_h - m_{A^0})^2)}$.
+where the center of mass momentum for the decay products is
+\begin{equation}
+|p| = \frac{1}{2 M_{\Zprime}} \sqrt{ (M_{\Zprime}^2 - (m_h + m_{A^0})^2)
+(M_{\Zprime}^2 - (m_h - m_{A^0})^2)}.
+\end{equation}
 The $\Zprime$ can also decay to $Zh$, leading to the same signature if the $Z$ decays invisibly. The partial width for this decay is:
 \begin{equation}
-\Gamma_{Z' \to hZ}  = (g_z \sin \beta^2)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{Z'}^2} + 3 \frac{M_Z^2}{M_{Z'}^2} \right),
-\end{equation}. We recommend to generate these two decays separately and combine them at a later stage. 
+\Gamma_{Z' \to hZ}  = (g_z \sin \beta^2)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{Z'}^2} + 3 \frac{M_Z^2}{M_{Z'}^2} \right).
+\end{equation} We recommend to generate these two decays separately and combine them at a later stage. 
 
 %\frac{1}{2 M_{\Zprime}} \lambda^{1/2}(M_{\Zprime}^2,m_h^2, m_{A^0}^2)$, and
 %$\lambda$ is the K\"{a}llen triangle function\footnote{\vskip -2.5\baselineskip%\begin{align*}\lambda(c_1,c_2,c_3) \equiv&\;c_1^2 + c_2^2 + c_3^2\\ 
@@ -569,14 +573,14 @@ we recommend to fix $\tan{\beta}$ to unity in the signal generation.
 \begin{figure}[htpb!]
 \centering
 \subfloat[\MET distribution]{
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_met}
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_met}
 }
 \hfill
 \subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-	\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_dphi12}
+	\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_dphi12}
 }
 \caption{Kinematic distributions of the signal process varying $\tan{\beta}$, in the case of a Higgs boson decaying into two $b$ quarks,
-	after parameterized detector simulation: no kinematic dependence is observed}
+	after parameterized detector simulation: no kinematic dependence is observed on the mixing angle.}
 \label{fig:DMH_tanbeta}
 \end{figure}
 
@@ -595,11 +599,11 @@ as long as $\mDM<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fi
 \begin{figure}[htpb!]
 	\centering
 	\subfloat[\MET distribution]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_met}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_met}
 	}
 	\hfill
 	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_dphi12}
+		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_dphi12}
 	}
 	\caption{Kinematic distributions of the signal process varying \mDM: minimal kinematic dependency on \mDM as expected when $A^0$ is produced on-shell. Plots shown for $M_{\Zprime}=1000$~\gev, $M_{A^0}=300$~\gev.}
 	\label{fig:DMH_mdm}
@@ -607,15 +611,15 @@ as long as $\mDM<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fi
  
   \begin{figure}[hbpt!]
   	\centering
-  		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zp2hdm_a0_300_MET_et_Log}
-  		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/zp2hdm_a0_1000_MET_et_Log}
+  		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zp2hdm_a0_300_MET_et_Log}
+  		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/zp2hdm_a0_1000_MET_et_Log}
   		\caption{Missing transverse momentum distributions at generator level in the \Zprime+2HDM 
   			scenario for different values of the DM mass \mDM, with 
   			$m_{\Zprime}$ = 1~\tev and $m_{A^0}$ = 300~\gev (left) and $m_{A^0}$ = 1~\tev (right).
   			\label{fig:zprimeDecay}}
   \end{figure}
   
-We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $\mDM=100$~\gev. For these values, we scan the 2-D parameter space of ${M_{\Zprime}, M_{A^0}}$ with $M_{\Zprime}=600, 800, 1000, 1200, 1400$~\gev, and $M_{A^0}=300, 400, 500, 600, 700, 800$~\gev with $M_{A^0} < M_{\Zprime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\cite{Berlin:2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{\Zprime} \sim 1.5$~\tev.
+We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $\mDM=100$~\gev. For these values, we scan the 2-D parameter space of ${M_{\Zprime}, M_{A^0}}$ with $M_{\Zprime}$=600, 800, 1000, 1200, 1400~\gev, and $M_{A^0}$=300, 400, 500, 600, 700, 800~\gev with $M_{A^0} < M_{\Zprime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\cite{Berlin:2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{\Zprime} \sim 1.5$~\tev.
 For the parameter scan, the DM mass is fixed to 100~\gev. For two $M_{\Zprime}$, $M_{A^0}$ value sets, we vary the DM mass to obtain sample cross section for rescaling results. 
 All LO cross sections for the various parameter scan points are reported on HEPData ~\cite{HEPData}.
 The parameter scan excludes the off-shell region, as the cross-sections are suppressed and the LHC would not have any
@@ -626,15 +630,15 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
  \begin{figure}[htpb!]
  	\centering
  	\subfloat[\MET distribution]{
- 		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_met}
+ 		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_met}
  	}
  	\hfill
  	\subfloat[Leading $b-$jet $p_T$  distribution]{
- 		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_p0}
+ 		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_p0}
  	}
  	\hfill
  	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
- 		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_dphi12}
+ 		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_dphi12}
  	}
  	
  	\caption{Kinematic distributions of the signal process varying $M_{\Zprime}$, for $\mDM=100$~\gev, $M_{A^0}=300$~\gev.}
@@ -644,14 +648,14 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
    \begin{figure}[htpb!]
    	\centering
    	\subfloat[\MET distribution]{
-   		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_met}
+   		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_met}
    	}\hfill
    	\subfloat[Leading $b-$jet $p_T$ distribution]{
-   		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_p0}
+   		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_p0}
    	}
    	\hfill
    	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-   		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_dphi12}
+   		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_dphi12}
    	}
    	\caption{Kinematic distributions of the signal process varying $M_{A^0}$, for $\mDM=100$~\gev, $M_{\Zprime}=1000$~\gev.}
    	\label{fig:DMH_ma0}
@@ -661,7 +665,7 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
  samples) to the signal process from the decay of $\Zprime \to h Z$, where the $Z$ decays invisibly. The partial decay width for the \Zprime is:
 
  \begin{equation}
- \Gamma_{\Zprime \to hZ}  = (g_z \cos \alpha \sin \beta)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{\Zprime}^2} + 3 \frac{M_Z^2}{M_{\Zprime}^2} \right),
+ \Gamma_{\Zprime \to hZ}  = (g_z \cos \alpha \sin \beta)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{\Zprime}^2} + 3 \frac{M_Z^2}{M_{\Zprime}^2} \right).
  \end{equation}
 The values for the \Zprime masses scanned for those samples should follow those of the previous samples, 
 namely values of $M_{\Zprime}=600, 800, 1000, 1200, 1400$~\gev.  This signal process has no $M_A$ dependence.
@@ -669,14 +673,14 @@ namely values of $M_{\Zprime}=600, 800, 1000, 1200, 1400$~\gev.  This signal pro
 \begin{figure}[htpb!]
   	\centering
   	\subfloat[\MET distribution]{
-  		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_met}
+  		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_met}
   	}\hfill
   	\subfloat[Leading $b-$jet $p_T$ distribution]{
-  		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphimetj0}
+  		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphimetj0}
   	}
   	\hfill
   	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-  		\includegraphics[width=0.65\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphi12}
+  		\includegraphics[width=0.60\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphi12}
   	}
   	\caption{Kinematic distributions of $\Zprime \to A^0\,h$ exclusive production, $\Zprime \to Zh$ exclusive production and \Zprime inclusive production for $M_{\Zprime}=1000$~\gev and $M_{A^0}=300$~\gev}
   	\label{fig:DMH_zpincl}
