change font to something closer to the journal font
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@473 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -138,6 +138,13 @@
 \usepackage{rotating}
 %%End nice tables
 
+%%%%%%%%%%%
+% change typeface to something closer to Elsevier's Gulliver
+% remove this before submission
+\usepackage[bitstream-charter]{mathdesign}
+\usepackage[T1]{fontenc}
+%%%%%%%%%%%
+
 % Prints an asterisk that takes up no horizontal space.
 % Useful in tabular environments.
 \newcommand{\hangstar}{\makebox[0pt][l]{*}}
